# code-racer

./: Cargo.toml  manifest.json  todo.txt
challenges/completion/vector_ops/go/: complete.go  incomplete.go
challenges/completion/vector_ops/rust/: complete.rs  incomplete.rs
challenges/conversion/fizz-buzz/: go.go
challenges/fizz-buzz/: go.go  psuedocode.txt
macros/: Cargo.toml
macros/src/: lib.rs
src/: args.rs  lib.rs  main.rs  manifest.rs  marker.rs
